fix: change style of links on all pages

--- a/NotAuthorized/WhoIsTarta.html
+++ b/NotAuthorized/WhoIsTarta.html
@@ -17,33 +17,33 @@
         </label>
         <ul class="menu__box theme-specialElement">
           <li>
-            <a class="menu__item" href="#termsOfService">Terms of Service</a>
+            <a class="menu__item theme-specialElement" href="#termsOfService">Terms of Service</a>
           </li>
           <li>
-            <a class="menu__item" href="#privacyPolicy">Privacy Policy</a>
+            <a class="menu__item theme-specialElement" href="#privacyPolicy">Privacy Policy</a>
           </li>
-          <li><a class="menu__item" href="#ourMessege">Our message</a></li>
+          <li><a class="menu__item theme-specialElement" href="#ourMessege">Our message</a></li>
           <li class="li">
-            <a class="menu__item" href="#makeOrder">How to make an order</a>
+            <a class="menu__item theme-specialElement" href="#makeOrder">How to make an order</a>
           </li>
           <li class="li">
-            <a class="menu__item" href="#top">Top</a>
+            <a class="menu__item theme-specialElement" href="#top">Top</a>
           </li>
         </ul>
       </div>
       <a href="..\NotAuthorized\index.html"
         ><img class="logo" src="..\Images\Frame.png" alt="logo"
       /></a>
-      <ul class="navigation">
+      <ul class="navigation ">
         <li class="li">
-          <a class="link" href="#termsOfService">Terms of Service</a>
+          <a class="link theme-element" href="#termsOfService">Terms of Service</a>
         </li>
         <li class="li">
-          <a class="link" href="#privacyPolicy">Privacy Policy</a>
+          <a class="link theme-element" href="#privacyPolicy">Privacy Policy</a>
         </li>
-        <li class="li"><a class="link" href="#ourMessage">Our message</a></li>
+        <li class="li"><a class="link theme-element" href="#ourMessage">Our message</a></li>
         <li class="li">
-          <a class="link" href="#makeOrder">How to make an order</a>
+          <a class="link theme-element" href="#makeOrder">How to make an order</a>
         </li>
       </ul>
       <div class="switchers">
@@ -210,10 +210,10 @@
       <img src="..\Images\e-mail.png" alt="E-mail">
     </div>
 <div class="divfooter" > 
-  <a class="link" href="..\NotAuthorized\index.html">Tarla</a>
-  <a class="link" href="..\NotAuthorized\location.html">Location</a>
-  <a class="link" href="..\NotAuthorized\index.html">Facts</a>
-  <a class="link" href="..\NotAuthorized\index.html">How use</a>
+  <a class="link theme-element" href="..\NotAuthorized\index.html">Tarla</a>
+  <a class="link theme-element" href="..\NotAuthorized\location.html">Location</a>
+  <a class="link theme-element" href="..\NotAuthorized\index.html">Facts</a>
+  <a class="link theme-element" href="..\NotAuthorized\index.html">How use</a>
 </div>
 <script src="..\changeColor.js"></script>
   </footer> 
