--- a/NotAuthorized/index.html
+++ b/NotAuthorized/index.html
@@ -20,17 +20,17 @@
       <label class="menu__btn" for="menu__toggle">
         <span></span>
       </label>
-      <ul class="menu__box">
-        <li><a data-i18="headerShop" class="menu__item" href="#shop">Shop</a></li>
-        <li><a data-i18="headerHowItWork" class="menu__item" href="#howItWorks">How it works?</a></li>
-        <li><a data-i18="headerWhoIsTarla" class="menu__item" href="#whoIsTarla">Who is Tarla?</a></li>
+      <ul class="menu__box theme-element">
+        <li><a data-i18="headerShop" class="menu__item theme-element" href="#shop">Shop</a></li>
+        <li><a data-i18="headerHowItWork" class="menu__item theme-element" href="#howItWorks">How it works?</a></li>
+        <li><a data-i18="headerWhoIsTarla" class="menu__item theme-element" href="#whoIsTarla">Who is Tarla?</a></li>
       </ul>
     </div>
     <img class="img" src="..\Images\Frame.png" alt="logo" />
     <ul class="navigation">
-      <li class="li"><a data-i18="headerShop" class="link" href="#registration"> Shop</a></li>
-      <li class="li"><a data-i18="headerHowItWork" class="link" href="#howItWorks">How it works?</a></li>
-      <li class="li"><a data-i18="headerWhoIsTarla" class="link" href="#whoIsTarla">Who is Tarla?</a></li>
+      <li class="li"><a data-i18="headerShop" class="link theme-element" href="#registration"> Shop</a></li>
+      <li class="li"><a data-i18="headerHowItWork" class="link theme-element" href="#howItWorks">How it works?</a></li>
+      <li class="li"><a data-i18="headerWhoIsTarla" class="link theme-element" href="#whoIsTarla">Who is Tarla?</a></li>
     </ul>
 
     <div class="switchers">
@@ -177,10 +177,10 @@
       <img src="..\Images\e-mail.png" alt="E-mail">
     </div>
 <div class="divfooter" > 
-  <a data-i18="FAQ" class="link" href="..\NotAuthorized\WhoIsTarta.html">FAQ</a>
-  <a  data-i18="Location" class="link" href="..\NotAuthorized\location.html">Location</a>
-  <a data-i18="TermsOfService" class="link" href="..\NotAuthorized\WhoIsTarta.html">Terms of Service</a>
-  <a data-i18="Privacy" class="link" href="..\NotAuthorized\WhoIsTarta.html">Privacy Policy</a>
+  <a data-i18="FAQ" class="link theme-element" href="..\NotAuthorized\WhoIsTarta.html">FAQ</a>
+  <a  data-i18="Location" class="link theme-element" href="..\NotAuthorized\location.html">Location</a>
+  <a data-i18="TermsOfService" class="link theme-element" href="..\NotAuthorized\WhoIsTarta.html">Terms of Service</a>
+  <a data-i18="Privacy" class="link theme-element" href="..\NotAuthorized\WhoIsTarta.html">Privacy Policy</a>
 </div>
 <script src="..\Tarla\swaper.js"></script>
 <script src="..\changeLanguage.js"></script>
