--- a/Tarla/catalog.html
+++ b/Tarla/catalog.html
@@ -14,9 +14,15 @@
       <label class="menu__btn" for="menu__toggle">
         <span></span>
       </label>
-      <ul class="menu__box">
-        <li><a class="menu__item" href="#catalog">Catalog</a></li>
-        <li><a class="menu__item" href="#delivery">Delivery</a></li>
+      <ul class="menu__box theme-specialElement">
+        <li>
+          <a class="menu__item theme-specialElement" href="#catalog">Catalog</a>
+        </li>
+        <li>
+          <a class="menu__item theme-specialElement" href="#delivery"
+            >Delivery</a
+          >
+        </li>
       </ul>
     </div>
     <a href="..\Tarla\index.html"
