--- a/Tarla/index.html
+++ b/Tarla/index.html
@@ -20,17 +20,17 @@
       <label class="menu__btn" for="menu__toggle">
         <span></span>
       </label>
-      <ul class="menu__box">
+      <ul class="menu__box theme-element">
         <li>
-          <a data-i18="headerShop" class="menu__item" href="#shop">Shop</a>
+          <a data-i18="headerShop" class="menu__item theme-element" href="#shop">Shop</a>
         </li>
         <li>
-          <a data-i18="headerHowItWork" class="menu__item" href="#howItWorks"
+          <a data-i18="headerHowItWork" class="menu__item theme-element" href="#howItWorks"
             >How it works?</a
           >
         </li>
         <li>
-          <a data-i18="headerWhoIsTarla" class="menu__item" href="#whoIsTarla"
+          <a data-i18="headerWhoIsTarla" class="menu__item theme-element" href="#whoIsTarla"
             >Who is Tarla?</a
           >
         </li>
@@ -39,15 +39,15 @@
     <img class="logo" src="..\Images\Frame.png" alt="logo" />
     <ul class="navigation">
       <li class="li">
-        <a data-i18="headerShop" class="link" href="#shop"> Shop</a>
+        <a data-i18="headerShop" class="link theme-element" href="#shop"> Shop</a>
       </li>
       <li class="li">
-        <a data-i18="headerHowItWork" class="link" href="#howItWorks"
+        <a data-i18="headerHowItWork" class="link theme-element" href="#howItWorks"
           >How it works?</a
         >
       </li>
       <li class="li">
-        <a data-i18="headerWhoIsTarla" class="link" href="#whoIsTarla"
+        <a data-i18="headerWhoIsTarla" class="link theme-element" href="#whoIsTarla"
           >Who is Tarla?</a
         >
       </li>
@@ -73,11 +73,11 @@
     </button>
   </header>
 
-  <body class="body">
+  <body class="body theme-element">
     <section class="section1 theme-block">
       <div class="div1">
-        <p data-i18="FreshPastryKits" class="H1">Fresh pastry kits</p>
-        <p data-i18="Smells" class="P1">
+        <p data-i18="FreshPastryKits" class="H1 theme-block">Fresh pastry kits</p>
+        <p data-i18="Smells" class="P1 theme-block">
           Bringing the smells and tastes of your favourite patisserie to your
           home. Our kits have everything you need to easily make killer pastries
           every time. We’ve done the tricky bits so all you need to do is roll,
@@ -269,14 +269,14 @@
       <img src="..\Images\e-mail.png" alt="E-mail" />
     </div>
     <div class="divfooter">
-      <a data-i18="FAQ" class="link" href="..\Tarla\aboutUs.html">FAQ</a>
-      <a data-i18="Location" class="link" href="..\Tarla\aboutUs.html"
+      <a data-i18="FAQ" class="link theme-element" href="..\Tarla\aboutUs.html">FAQ</a>
+      <a data-i18="Location" class="link theme-element" href="..\Tarla\aboutUs.html"
         >Location</a
       >
-      <a data-i18="Catalog" class="link" href="..\Tarla\catalog.html"
+      <a data-i18="Catalog" class="link theme-element" href="..\Tarla\catalog.html"
         >Catalog</a
       >
-      <a data-i18="Price" class="link" href="..\Tarla\catalog.html">Prices</a>
+      <a data-i18="Price" class="link theme-element" href="..\Tarla\catalog.html">Prices</a>
     </div>
     <script src="..\Tarla\swaper.js"></script>
     <script src="..\changeLanguage.js"></script>
