--- a/NotAuthorized/location.html
+++ b/NotAuthorized/location.html
@@ -11,29 +11,29 @@
     <header id="top" class="header theme-specialElement">
       <a class="logo" href="..\NotAuthorized\index.html"><img src="..\Images\Frame.png" alt="logo" /></a>
       
-      <div class="hamburger-menu theme-element">
+      <div class="hamburger-menu ">
         <input id="menu__toggle" type="checkbox" />
         <label class="menu__btn" for="menu__toggle">
           <span></span>
         </label>
-        <ul class="menu__box">
+        <ul class="menu__box theme-element">
           <li class="li">
-            <a class="menu__item" href="#top">Top</a>
+            <a class="menu__item theme-element" href="#top">Top</a>
           </li>
           <li>
-            <a class="menu__item" href="#ingredient"> Ingredients</a></li>
+            <a class="menu__item theme-element" href="#ingredient"> Ingredients</a></li>
           </li>
           <li>
-            <a class="menu__item" href="#location">Location</a></li>
+            <a class="menu__item theme-element" href="#location">Location</a></li>
           </li>
-          <li><a class="menu__item" href="#legend">Legend</a></li>
+          <li><a class="menu__item theme-element" href="#legend">Legend</a></li>
           </ul>
       </div>
       
         <ul class="navigation">
-            <li class="li"><a class="link" href="#ingredient"> Ingredients</a></li>
-            <li class="li"><a class="link" href="#location">Location</a></li>
-            <li class="li"><a class="link" href="#legend">Legend</a></li>
+            <li class="li"><a class="link theme-specialElement" href="#ingredient"> Ingredients</a></li>
+            <li class="li"><a class="link theme-specialElement" href="#location">Location</a></li>
+            <li class="li"><a class="link theme-specialElement" href="#legend">Legend</a></li>
           </ul>
           <div class="switchers">
             <button data-i18="en" class="switcher changeButton theme-blueButton">
@@ -107,10 +107,10 @@
         <img src="..\Images\e-mail.png" alt="E-mail">
       </div>
   <div class="divfooter" > 
-    <a class="link" href="..\NotAuthorized\WhoIsTarta.html">FAQ</a>
-    <a class="link" href="..\NotAuthorized\index.html">Tarla</a>
-    <a class="link" href="..\NotAuthorized\WhoIsTarta.html">Terms of Service</a>
-    <a class="link" href="..\NotAuthorized\WhoIsTarta.html">Privacy Policy</a>
+    <a class="link theme-element" href="..\NotAuthorized\WhoIsTarta.html">FAQ</a>
+    <a class="link theme-element" href="..\NotAuthorized\index.html">Tarla</a>
+    <a class="link theme-element" href="..\NotAuthorized\WhoIsTarta.html">Terms of Service</a>
+    <a class="link theme-element" href="..\NotAuthorized\WhoIsTarta.html">Privacy Policy</a>
   </div>
   <script src="..\Tarla\swaper.js"></script>
   <script src="..\changeLanguage.js"></script>
