--- a/Tarla/aboutUs.html
+++ b/Tarla/aboutUs.html
@@ -8,23 +8,23 @@
     <link rel="stylesheet" href="..\changeColor.css" />
   </head>
     <header class="header theme-specialElement">
-    <div class="hamburger-menu theme-element">
+    <div class="hamburger-menu theme-specialElement">
       <input id="menu__toggle" type="checkbox" />
       <label class="menu__btn" for="menu__toggle">
         <span></span>
       </label>
-      <ul class="menu__box">
-        <li><a class="menu__item" href="#legend">Legend</a></li>
-        <li><a class="menu__item" href="#privacyPolicy">Privacy Policy</a></li>
-        <li><a class="menu__item" href="#location">Location</a></li>
+      <ul class="menu__box theme-specialElement">
+        <li><a class="menu__item theme-specialElement" href="#legend">Legend</a></li>
+        <li><a class="menu__item theme-specialElement" href="#privacyPolicy">Privacy Policy</a></li>
+        <li><a class="menu__item theme-specialElement" href="#location">Location</a></li>
       </ul>
     </div>
     <a class="logo" href="..\Tarla\index.html"><img src="..\Images\Frame.png" alt="logo" /></a>
     
     <ul class="navigation">
-      <li class="li"><a class="link" href="#legend">Legend</a></li>
-      <li class="li"><a class="link" href="#privacyPolicy">Privacy Policy</a></li>
-      <li class="li"><a class="link" href="#location">Location</a></li>
+      <li class="li"><a class="link theme-specialElement" href="#legend">Legend</a></li>
+      <li class="li"><a class="link theme-specialElement" href="#privacyPolicy">Privacy Policy</a></li>
+      <li class="li"><a class="link theme-specialElement" href="#location">Location</a></li>
     </ul>
     <div class="switchers">
       <button data-i18="en" class="switcher changeButton theme-blueButton">
@@ -162,10 +162,10 @@
       <img src="..\Images\e-mail.png" alt="E-mail">
     </div>
 <div class="divfooter" > 
-  <a class="link" href="..\Tarla\index.html">Tarla</a>
-  <a class="link" href="..\Tarla\index.html">How to use</a>
-  <a class="link" href="..\Tarla\catalog.html">Catalog</a>
-  <a class="link" href="..\Tarla\catalog.html">Prices</a>
+  <a class="link theme-element" href="..\Tarla\index.html">Tarla</a>
+  <a class="link theme-element" href="..\Tarla\index.html">How to use</a>
+  <a class="link theme-element" href="..\Tarla\catalog.html">Catalog</a>
+  <a class="link theme-element" href="..\Tarla\catalog.html">Prices</a>
 </div>
 <script src="..\Tarla\swaper.js"></script>
 <script src="..\changeLanguage.js"></script>
