fezt: made catalog page adaptive

--- a/Tarla/catalog.html
+++ b/Tarla/catalog.html
@@ -26,7 +26,7 @@
       </ul>
     </div>
     <a href="..\Tarla\index.html"
-      ><img src="..\Images\Frame.png" alt="logo"
+      ><img class="logo" src="..\Images\Frame.png" alt="logo"
     /></a>
 
     <ul class="navigation">
@@ -61,9 +61,9 @@
   <body class="body theme-element">
     <section class="section theme-element">
       <div class="card theme-element">
-        <img id="catalog" src="..\Images\3-1.png" alt="" />
-        <div class="divLeftYoRight baseText">
-          <h2 class="mainText">All-Butter Croissant</h2>
+        <img class="visible" id="catalog" src="..\Images\3-1.png" alt="" />
+        <div class="div baseText">
+          <h2 data-i18="AllButter" class="mainText">All-Butter Croissant</h2>
           <p>
             an all-butter croissant is a classic French pastry renowned for its
             flaky, buttery layers and delicate texture. Its golden exterior
@@ -72,21 +72,23 @@
             that fills the air, enticing the senses with its irresistible
             allure.
           </p>
+          <img class="unvisible" id="catalog" src="..\Images\3-1.png" alt="" />
           <h3 class="mainText">Composition</h3>
           <p>flour, butter, water, milk, sugar, salt, yeast</p>
           <h3 class="mainText">Price: kit of 6 - £12</h3>
         </div>
       </div>
       <div class="card theme-element">
-        <div class="divLeftYoRight baseText">
+        <div class="div baseText">
           <h2 class="mainText">Almond Croissant</h2>
           <p>
             An almond croissant is a delectable pastry that starts with the same
             flaky, buttery layers as a traditional croissant but is then filled
             with a sweet almond paste or frangipane filling. Once baked, it's
             topped with a generous sprinkling of sliced almonds, adding a
-            delightful crunch and nutty flavor to every bite. T
+            delightful crunch and nutty flavor to every bite.
           </p>
+          <img class="unvisible" id="catalog" src="..\Images\3-2.png" alt="" />
           <h3 class="mainText">Composition</h3>
           <p>
             flour, butter, water, milk, sugar, salt, yeast, almonds (whole or
@@ -94,23 +96,22 @@
           </p>
           <h3 class="mainText">Price: kit of 6 - £13.50</h3>
         </div>
-        <img src="..\Images\3-2.png" alt="" />
+        <img class="visible" src="..\Images\3-2.png" alt="" />
       </div>
       <div class="card theme-element">
-        <img src="..\Images\3-3.png" alt="" />
-        <div class="divLeftYoRight baseText">
-          <h2 class="mainText">Raspberry Danish</h2>
+        <img class="visible" src="..\Images\3-3.png" alt="" />
+        <div class="div baseText">
+          <h2 class="mainText">All-Butter Croissant</h2>
           <p>
             A raspberry Danish is a delightful pastry that features a tender,
             flaky dough base, typically shaped into an oval or rectangular form.
             The dough is then filled with a luscious raspberry compote or jam,
-            which adds a burst of sweet-tart flavor. Sometimes, a creamy cheese
-            filling, such as cream cheese or almond paste, is layered beneath
-            the raspberries, adding richness and depth to the pastry. After
-            baking, the raspberry Danish is often drizzled with a sweet glaze or
-            dusted with powdered sugar, enhancing its visual appeal and adding a
-            touch of extra sweetness.
+            which adds a burst of sweet-tart flavor. After baking, the raspberry
+            Danish is often drizzled with a sweet glaze or dusted with powdered
+            sugar, enhancing its visual appeal and adding a touch of extra
+            sweetness.
           </p>
+          <img class="unvisible" id="catalog" src="..\Images\3-3.png" alt="" />
           <h3 class="mainText">Composition</h3>
           <p>
             flour, butter, sugar, salt, yeast, eggs, milk, raspberry compote or
@@ -121,7 +122,7 @@
         </div>
       </div>
       <div class="card theme-element">
-        <div class="divLeftYoRight baseText">
+        <div class="div baseText">
           <h2 class="mainText">Pain Aux Raisins</h2>
           <p>
             Pain aux raisins, also known as "raisin Danish" or "raisin swirl,"
@@ -129,11 +130,9 @@
             flaky dough wrapped around a sweet filling of pastry cream and plump
             raisins. The dough is typically rolled out thinly, spread with
             pastry cream, and sprinkled with raisins before being rolled into a
-            spiral shape. After baking, the pain aux raisins emerges from the
-            oven with a golden-brown crust and a tantalizing aroma that hints at
-            its indulgent interior. Often, a light glaze or dusting of powdered
-            sugar is added to enhance its sweetness and visual appeal.
+            spiral shape.
           </p>
+          <img class="unvisible" id="catalog" src="..\Images\3-4.png" alt="" />
           <h3 class="mainText">Composition</h3>
           <p>
             flour, butter, sugar, salt, yeast, eggs, milk, pastry cream,
@@ -141,23 +140,21 @@
           </p>
           <h3 class="mainText">Price: kit of 6 - £13.50</h3>
         </div>
-        <img src="..\Images\3-4.png" alt="" />
+        <img class="visible" src="..\Images\3-4.png" alt="" />
       </div>
       <div class="card theme-element">
-        <img src="..\Images\3-5.png" alt="" />
-        <div div class="divLeftYoRight baseText">
+        <img class="visible" src="..\Images\3-5.png" alt="" />
+        <div div class="div baseText">
           <h2 class="mainText">Apricot Danish</h2>
           <p>
             An apricot Danish is a delightful pastry that combines tender, flaky
             layers of dough with a sweet and tangy apricot filling. The dough is
             typically shaped into a square or rectangular form and then filled
             with apricot jam or compote, which lends a burst of fruity flavor to
-            every bite. Sometimes, a layer of creamy cheese, such as cream
-            cheese or almond paste, is spread beneath the apricot filling,
-            adding richness and depth to the pastry. After baking, the apricot
-            Danish is often adorned with a light glaze or dusting of powdered
-            sugar, enhancing its sweetness and visual appeal.
+            every bite. Danish is often adorned with a light glaze or dusting of
+            powdered sugar, enhancing its sweetness and visual appeal.
           </p>
+          <img class="unvisible" id="catalog" src="..\Images\3-5.png" alt="" />
           <h3 class="mainText">Composition</h3>
           <p>
             flour, butter, sugar, salt, yeast, eggs, milk, apricot jam or
@@ -168,30 +165,26 @@
         </div>
       </div>
       <div class="card theme-element">
-        <div div class="divLeftYoRight baseText">
+        <div div class="div baseText">
           <h2 class="mainText">Pain Au Chocolat</h2>
           <p>
             Pain au chocolat, also known as a chocolate croissant, is a
             delectable pastry that combines the buttery, flaky layers of a
-            croissant with rich, indulgent chocolate filling. The pastry dough
-            is rolled out thinly and then filled with bars or squares of
-            high-quality dark chocolate. The dough is then folded over the
-            chocolate, creating multiple layers of pastry enveloping the
-            chocolate filling. After baking, the pain au chocolat emerges from
-            the oven with a golden-brown exterior and a melty, chocolatey
-            interior. The combination of crispy, buttery layers and decadent
-            chocolate makes it a beloved treat for breakfast or any time of the
-            day.
+            croissant with rich, indulgent chocolate filling.The dough is then
+            folded over the chocolate, creating multiple layers of pastry
+            enveloping the chocolate filling. After baking, the pain au chocolat
+            emerges from the oven with a golden-brown exterior and a melty,
+            chocolatey interior.
           </p>
+          <img class="unvisible" id="catalog" src="..\Images\3-6.png" alt="" />
           <h3 class="mainText">Composition</h3>
           <p>flour, butter, water, milk, sugar, salt, yeast, dark chocolate</p>
           <h3 class="mainText">Price: kit of 6 - £13.50</h3>
         </div>
-        <img src="..\Images\3-6.png" alt="" />
+        <img class="visible" src="..\Images\3-6.png" alt="" />
       </div>
     </section>
-    <img src="..\Images\fone.jpg" alt="" />
-
+    <img class="img" src="..\Images\fone.jpg" alt="" />
     <section class="delivery baseText theme-element">
       <div id="delivery" class="divDelivery">
         <p class="mainText">Self-Pickup</p>
