feat: add mode change for catalog page

--- a/Tarla/catalog.html
+++ b/Tarla/catalog.html
@@ -16,10 +16,10 @@
       </label>
       <ul class="menu__box theme-specialElement">
         <li>
-          <a class="menu__item theme-specialElement" href="#catalog">Catalog</a>
+          <a class="menu__item theme-specialElement" data-i18="Catalog" href="#catalog">Catalog</a>
         </li>
         <li>
-          <a class="menu__item theme-specialElement" href="#delivery"
+          <a class="menu__item theme-specialElement" data-i18="Delivery" href="#delivery"
             >Delivery</a
           >
         </li>
@@ -31,10 +31,10 @@
 
     <ul class="navigation">
       <li class="li">
-        <a class="link theme-specialElement" href="#catalog">Catalog</a>
+        <a class="link theme-specialElement" data-i18="Catalog" href="#catalog">Catalog</a>
       </li>
       <li class="li">
-        <a class="link theme-specialElement" href="#delivery">Delivery</a>
+        <a class="link theme-specialElement" data-i18="Delivery" href="#delivery">Delivery</a>
       </li>
     </ul>
 
@@ -64,7 +64,7 @@
         <img class="visible" id="catalog" src="..\Images\3-1.png" alt="" />
         <div class="div baseText">
           <h2 data-i18="AllButter" class="mainText">All-Butter Croissant</h2>
-          <p>
+          <p data-i18="AllButterDiv">
             an all-butter croissant is a classic French pastry renowned for its
             flaky, buttery layers and delicate texture. Its golden exterior
             hides a soft, airy interior, creating a perfect balance of crispness
@@ -73,15 +73,15 @@
             allure.
           </p>
           <img class="unvisible" id="catalog" src="..\Images\3-1.png" alt="" />
-          <h3 class="mainText">Composition</h3>
-          <p>flour, butter, water, milk, sugar, salt, yeast</p>
-          <h3 class="mainText">Price: kit of 6 - £12</h3>
+          <h3 data-i18="Composition" class="mainText">Composition</h3>
+          <p data-i18="AllButterComp">flour, butter, water, milk, sugar, salt, yeast</p>
+          <h3 data-i18="Prices" class="mainText">Price: kit of 6 - £12</h3>
         </div>
       </div>
       <div class="card theme-element">
         <div class="div baseText">
-          <h2 class="mainText">Almond Croissant</h2>
-          <p>
+          <h2 data-i18="Almond" class="mainText">Almond Croissant</h2>
+          <p data-i18="AlmondDif">
             An almond croissant is a delectable pastry that starts with the same
             flaky, buttery layers as a traditional croissant but is then filled
             with a sweet almond paste or frangipane filling. Once baked, it's
@@ -89,20 +89,20 @@
             delightful crunch and nutty flavor to every bite.
           </p>
           <img class="unvisible" id="catalog" src="..\Images\3-2.png" alt="" />
-          <h3 class="mainText">Composition</h3>
-          <p>
+          <h3 data-i18="Composition" class="mainText">Composition</h3>
+          <p data-i18="AlmondComp">
             flour, butter, water, milk, sugar, salt, yeast, almonds (whole or
             sliced), almond extract (optional)
           </p>
-          <h3 class="mainText">Price: kit of 6 - £13.50</h3>
+          <h3 data-i18="Prices" class="mainText">Price: kit of 6 - £13.50</h3>
         </div>
         <img class="visible" src="..\Images\3-2.png" alt="" />
       </div>
       <div class="card theme-element">
         <img class="visible" src="..\Images\3-3.png" alt="" />
         <div class="div baseText">
-          <h2 class="mainText">All-Butter Croissant</h2>
-          <p>
+          <h2 data-i18="Raspberry" class="mainText">Raspberry Danish</h2>
+          <p data-i18="RaspberryDif">
             A raspberry Danish is a delightful pastry that features a tender,
             flaky dough base, typically shaped into an oval or rectangular form.
             The dough is then filled with a luscious raspberry compote or jam,
@@ -112,19 +112,19 @@
             sweetness.
           </p>
           <img class="unvisible" id="catalog" src="..\Images\3-3.png" alt="" />
-          <h3 class="mainText">Composition</h3>
-          <p>
+          <h3 data-i18="Composition" class="mainText">Composition</h3>
+          <p data-i18="RaspberryComp">
             flour, butter, sugar, salt, yeast, eggs, milk, raspberry compote or
             jam, cream cheese or almond paste (optional), powdered sugar (for
             dusting, optional)
           </p>
-          <h3 class="mainText">Price: kit of 6 - £13.50</h3>
+          <h3 data-i18="Prices" class="mainText">Price: kit of 6 - £13.50</h3>
         </div>
       </div>
       <div class="card theme-element">
         <div class="div baseText">
-          <h2 class="mainText">Pain Aux Raisins</h2>
-          <p>
+          <h2 data-i18="PainAuxPaisins" PainAuxPaisins class="mainText">Pain Aux Raisins</h2>
+          <p data-i18="PainAuxPaisinsDif">
             Pain aux raisins, also known as "raisin Danish" or "raisin swirl,"
             is a delectable French pastry that showcases layers of buttery,
             flaky dough wrapped around a sweet filling of pastry cream and plump
@@ -133,20 +133,20 @@
             spiral shape.
           </p>
           <img class="unvisible" id="catalog" src="..\Images\3-4.png" alt="" />
-          <h3 class="mainText">Composition</h3>
-          <p>
+          <h3 data-i18="Composition" class="mainText">Composition</h3>
+          <p data-i18="PainAuxPaisinsDif">
             flour, butter, sugar, salt, yeast, eggs, milk, pastry cream,
             raisins, powdered sugar (for dusting, optional)
           </p>
-          <h3 class="mainText">Price: kit of 6 - £13.50</h3>
+          <h3 data-i18="Prices" class="mainText">Price: kit of 6 - £13.50</h3>
         </div>
         <img class="visible" src="..\Images\3-4.png" alt="" />
       </div>
       <div class="card theme-element">
         <img class="visible" src="..\Images\3-5.png" alt="" />
         <div div class="div baseText">
-          <h2 class="mainText">Apricot Danish</h2>
-          <p>
+          <h2 data-i18="Apricot" class="mainText">Apricot Danish</h2>
+          <p data-i18="ApricotDif">
             An apricot Danish is a delightful pastry that combines tender, flaky
             layers of dough with a sweet and tangy apricot filling. The dough is
             typically shaped into a square or rectangular form and then filled
@@ -155,19 +155,19 @@
             powdered sugar, enhancing its sweetness and visual appeal.
           </p>
           <img class="unvisible" id="catalog" src="..\Images\3-5.png" alt="" />
-          <h3 class="mainText">Composition</h3>
-          <p>
+          <h3 data-i18="Composition" class="mainText">Composition</h3>
+          <p data-i18="ApricotComp">
             flour, butter, sugar, salt, yeast, eggs, milk, apricot jam or
             compote, cream cheese or almond paste (optional), powdered sugar
             (for dusting, optional)
           </p>
-          <h3 class="mainText">Price: kit of 6 - £13.50</h3>
+          <h3 data-i18="Prices" class="mainText">Price: kit of 6 - £13.50</h3>
         </div>
       </div>
       <div class="card theme-element">
         <div div class="div baseText">
-          <h2 class="mainText">Pain Au Chocolat</h2>
-          <p>
+          <h2 data-i18="PainAuChocolate" class="mainText">Pain Au Chocolat</h2>
+          <p data-i18="PainAuChocolateDif">
             Pain au chocolat, also known as a chocolate croissant, is a
             delectable pastry that combines the buttery, flaky layers of a
             croissant with rich, indulgent chocolate filling.The dough is then
@@ -177,9 +177,9 @@
             chocolatey interior.
           </p>
           <img class="unvisible" id="catalog" src="..\Images\3-6.png" alt="" />
-          <h3 class="mainText">Composition</h3>
-          <p>flour, butter, water, milk, sugar, salt, yeast, dark chocolate</p>
-          <h3 class="mainText">Price: kit of 6 - £13.50</h3>
+          <h3 data-i18="Composition" class="mainText">Composition</h3>
+          <p data-i18="PainAuChocolateComp">flour, butter, water, milk, sugar, salt, yeast, dark chocolate</p>
+          <h3 data-i18="Prices" class="mainText">Price: kit of 6 - £13.50</h3>
         </div>
         <img class="visible" src="..\Images\3-6.png" alt="" />
       </div>
@@ -187,35 +187,35 @@
     <img class="img" src="..\Images\fone.jpg" alt="" />
     <section class="delivery baseText theme-element">
       <div id="delivery" class="divDelivery">
-        <p class="mainText">Self-Pickup</p>
+        <p data-i18="SelfPickup" class="mainText">Self-Pickup</p>
         <ul>
-          <li>
+          <li data-i18="SelfPickup1">
             You can pick up your order at our store located at: 10 Lenin Street.
           </li>
-          <li>
+          <li data-i18="SelfPickup2">
             Self-pickup hours: from 9:00 AM to 6:00 PM, Monday to Saturday.
           </li>
-          <li>Please call us in advance to confirm your order is ready.</li>
+          <li data-i18="SelfPickup3">Please call us in advance to confirm your order is ready.</li>
         </ul>
       </div>
       <div class="divDelivery">
-        <p class="mainText">Pickup Point</p>
+        <p data-i18="PickupPoint" class="mainText">Pickup Point</p>
         <ul>
-          <li>You can pick up your order at any of our pickup points.</li>
-          <li>
+          <li data-i18="PickupPoint1">You can pick up your order at any of our pickup points.</li>
+          <li data-i18="PickupPoint2">
             Pickup points are located at: 5 Pushkin Street; 20 Sadovaya Street.
           </li>
-          <li>
+          <li data-i18="PickupPoint3">
             Pickup points hours: from 10:00 AM to 8:00 PM, seven days a week.
           </li>
         </ul>
       </div>
       <div class="divDelivery">
-        <p class="mainText">Courier Delivery</p>
+        <p data-i18="CourierDelivery" class="mainText">Courier Delivery</p>
         <ul>
-          <li>Courier delivery is available within the city.</li>
-          <li>Delivery hours: from 12:00 PM to 9:00 PM, Monday to Saturday.</li>
-          <li>The delivery cost is 300 rubles.</li>
+          <li data-i18="CourierDelivery1">Courier delivery is available within the city.</li>
+          <li data-i18="CourierDelivery2">Delivery hours: from 12:00 PM to 9:00 PM, Monday to Saturday.</li>
+          <li data-i18="CourierDelivery3">The delivery cost is 300 rubles.</li>
         </ul>
       </div>
     </section>
@@ -229,10 +229,10 @@
       <a href=""><img src="..\Images\e-mail.png" alt="E-mail" /></a>
     </div>
     <div class="divfooter">
-      <a class="link theme-element" href="..\Tarla\index.html">Tarla</a>
-      <a class="link theme-element" href="..\Tarla\index.html">How to use</a>
-      <a class="link theme-element" href="..\Tarla\aboutUs.html">Legend</a>
-      <a class="link theme-element" href="..\Tarla\aboutUs.html"
+      <a data-i18="Tarla" class="link theme-element" href="..\Tarla\index.html">Tarla</a>
+      <a data-i18="headerHowItWork" class="link theme-element" href="..\Tarla\index.html">How to use</a>
+      <a data-i18="Legend" class="link theme-element" href="..\Tarla\aboutUs.html">Legend</a>
+      <a data-i18="Privacy" class="link theme-element" href="..\Tarla\aboutUs.html"
         >Privacy Policy</a
       >
     </div>
